# starrstack-auth

./: .env.example  pyproject.toml
src/starrstack_auth/: __init__.py  core.py
tests/: test_auth.py
